--- a/android-npm/build.gradle
+++ b/android-npm/build.gradle
@@ -66,18 +66,19 @@ rootProject.getSubprojects().forEach({project ->
                 replaceSoTask.appName = project.getProperties().path
                 replaceSoTask.buildDir = project.getProperties().buildDir
                 def appName = project.getProperties().path
+                if(project.getTasks().findByName("${appName}:merge${flavorString}DebugNativeLibs")) {
+                    replaceSoTaskDebug.dependsOn(
+                            project.getTasks().getByPath("${appName}:merge${flavorString}DebugNativeLibs"),
+                            project.getTasks().getByPath("${appName}:strip${flavorString}DebugDebugSymbols")
+                    )
+                    project.getTasks().getByPath("${appName}:package${flavorString}Debug").dependsOn(replaceSoTaskDebug)
 
-                replaceSoTaskDebug.dependsOn(
-                        project.getTasks().getByPath("${appName}:merge${flavorString}DebugNativeLibs"),
-                        project.getTasks().getByPath("${appName}:strip${flavorString}DebugDebugSymbols")
-                )
-                project.getTasks().getByPath("${appName}:package${flavorString}Debug").dependsOn(replaceSoTaskDebug)
-
-                replaceSoTaskRelease.dependsOn(
-                        project.getTasks().getByPath("${appName}:merge${flavorString}ReleaseNativeLibs"),
-                        project.getTasks().getByPath("${appName}:strip${flavorString}ReleaseDebugSymbols")
-                )
-                project.getTasks().getByPath("${appName}:package${flavorString}Release").dependsOn(replaceSoTaskRelease)
+                    replaceSoTaskRelease.dependsOn(
+                            project.getTasks().getByPath("${appName}:merge${flavorString}ReleaseNativeLibs"),
+                            project.getTasks().getByPath("${appName}:strip${flavorString}ReleaseDebugSymbols")
+                    )
+                    project.getTasks().getByPath("${appName}:package${flavorString}Release").dependsOn(replaceSoTaskRelease)
+                }
             }
         }
     }
